--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,3 +9,20 @@ $secondaryColor-d : #004ba0 ;
 $accentColor-n : #e0e0e0 ;
 $accentColor-l : #ffffff ;
 $accentColor-d : #aeaeae ;
+
+$red            : #d32f2f ;
+$pink           : #c2185b ;
+$purple         : #7b1fa2 ;
+$deep-purple    : #512da8 ;
+$indigo         : #303f9f ;
+$blue           : #1976d2 ;
+$light-blue     : #0288d1 ;
+$cyan           : #0097a7 ;
+$teal           : #00796b ;
+$green          : #388e3c ;
+$light-green    : #689f38 ;
+$lime           : #afb42b ;
+$yellow         : #fbc02d ;
+$amber          : #ffa000 ;
+$orange         : #f57c00 ;
+$deep-orange    : #e64a19 ;
