--- a/src/scss/editPicPage.sass
+++ b/src/scss/editPicPage.sass
@@ -13,6 +13,18 @@
         transition: transform 1s
         border-right: 1px solid rgba($primaryColor-l,0.5)
 
+        div
+            width: 100%
+            height: 20vh
+            transition: all 0.5s
+
+            &:hover
+                filter: brightness(130%)
+                
+        hr
+            margin: 0
+            opacity: 0.5
+
     .menuToggle
         display: flex
         flex-direction: column
