--- a/src/scss/body.sass
+++ b/src/scss/body.sass
@@ -10,7 +10,7 @@ body
     width: 100%
     overflow: hidden
 
-    background-color: $primaryColor-n
+    background: linear-gradient(45deg,$primaryColor-n 0%,$blue 350%)
 
 
     *
