--- a/src/scss/editPicPage.sass
+++ b/src/scss/editPicPage.sass
@@ -25,8 +25,10 @@
             &:hover
                 filter: brightness(130%)
 
-                p,i
+                p
                     transform: scale(1.2)
+                i
+                    transform: scale(1.2) rotateY(180deg)
 
             i
                 color: $primaryColor-d
