--- a/src/scss/editPicPage.sass
+++ b/src/scss/editPicPage.sass
@@ -12,6 +12,7 @@
         width: 30%
         transition: transform 1s
         border-right: 1px solid rgba($primaryColor-l,0.5)
+        overflow-y: scroll
 
         div
             display: flex
@@ -19,7 +20,7 @@
             justify-content: center
             align-items: center
             width: 100%
-            height: 20vh
+            height: 25vh
             transition: all 0.5s
 
             &:hover
@@ -28,7 +29,7 @@
                 p
                     transform: scale(1.2)
                 i
-                    transform: scale(1.2) rotateY(180deg)
+                    transform: scale(1.2) rotateY(360deg)
 
             i
                 color: $primaryColor-d
