--- a/src/scss/mediaqueries.scss
+++ b/src/scss/mediaqueries.scss
@@ -4,7 +4,7 @@
             width: 100% !important;
         }
     .menuTogglerOn{
-        left: 100% !important;
-    }
+        display: none !important;
+        }
     }
   }
