--- a/src/scss/mediaqueries.scss
+++ b/src/scss/mediaqueries.scss
@@ -2,6 +2,7 @@
     .container{
         .toolPicker{
             width: 100% !important;
+            min-width: 100%;
         }
     .menuTogglerOn{
         display: none !important;
