--- a/src/scss/editPicPage.sass
+++ b/src/scss/editPicPage.sass
@@ -1,8 +1,13 @@
-.container
+.Container
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
     height: 100%
     width: 100%
 
     .toolPicker
+        z-index: 1
         position: absolute
         left: 0
         top: 0
@@ -15,6 +20,7 @@
         overflow-y: scroll
 
         div
+            position: relative
             display: flex
             flex-direction: column
             justify-content: center
@@ -23,8 +29,17 @@
             height: 25vh
             transition: all 0.5s
 
+            &:after
+                content: ""
+                position: absolute
+                top: 0
+                left: 0
+                width: 100%
+                height: 100%
+
             &:hover
                 filter: brightness(130%)
+                cursor: pointer
 
                 p
                     transform: scale(1.2)
@@ -50,6 +65,7 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        z-index: 1
         position: absolute
         top: 0%
         width: 50px
@@ -65,3 +81,110 @@
             font-size: 25px
             color: $primaryColor-n
             transition: transform 0.5s
+
+    .appContent
+        position: relative
+        height: 91%
+        width: 91%
+        border: 1px solid $primaryColor-d
+
+        .uploadPic
+            background-color: rgba($light-blue,0.8)
+            height: 100%
+            width: 100%
+
+            display: flex
+            flex-direction: columns
+            justify-content: center
+            align-items: center
+            
+            i
+                color: $primaryColor-d
+                font-size: 25px
+                transition: all 0.5s
+            
+            p
+                transition: all 0.5s
+                padding: 0
+                margin: 0
+
+        .resizePic
+            background-color: rgba($teal,0.8)
+            height: 100%
+            width: 100%
+
+            display: flex
+            flex-direction: columns
+            justify-content: center
+            align-items: center
+            
+            i
+                color: $primaryColor-d
+                font-size: 25px
+                transition: all 0.5s
+            
+            p
+                transition: all 0.5s
+                padding: 0
+                margin: 0
+            
+        .filterPic
+            background-color: rgba($light-green,0.8)
+            height: 100%
+            width: 100%
+
+            display: flex
+            flex-direction: columns
+            justify-content: center
+            align-items: center
+            
+            i
+                color: $primaryColor-d
+                font-size: 25px
+                transition: all 0.5s
+            
+            p
+                transition: all 0.5s
+                padding: 0
+                margin: 0
+            
+        .changeAfterDotPic
+            background-color: rgba($yellow,0.8)
+            height: 100%
+            width: 100%
+
+            display: flex
+            flex-direction: columns
+            justify-content: center
+            align-items: center
+            
+            i
+                color: $primaryColor-d
+                font-size: 25px
+                transition: all 0.5s
+            
+            p
+                transition: all 0.5s
+                padding: 0
+                margin: 0
+            
+        .downloadPic
+            position: relative
+            background-color: rgba($orange,0.8)
+            height: 100%
+            width: 100%
+
+            display: flex
+            flex-direction: columns
+            justify-content: center
+            align-items: center
+            
+            i
+                color: $primaryColor-d
+                font-size: 25px
+                transition: all 0.5s
+            
+            p
+                transition: all 0.5s
+                padding: 0
+                margin: 0
