--- a/src/scss/presetClass.sass
+++ b/src/scss/presetClass.sass
@@ -21,49 +21,49 @@
             transform: scale(1.2) rotate(0deg)
 
 .red            
-    color: $red ;
+    color: $red
 
 .pink           
-    background-color: $pink ;
+    background-color: $pink
 
 .purple         
-    background-color: $purple ;
+    background-color: $purple
 
 .deep-purple    
-    background-color: $deep-purple ;
+    background-color: $deep-purple
 
 .indigo         
-    background-color: $indigo ;
+    background-color: $indigo
 
 .blue           
-    background-color: $blue ;
+    background-color: $blue
 
 .light-blue     
-    background-color: $light-blue ;
+    background-color: $light-blue
 
 .cyan           
-    background-color: $cyan ;
+    background-color: $cyan
 
 .teal           
-    background-color: $teal ;
+    background-color: $teal
 
 .green          
-    background-color: $green ;
+    background-color: $green
 
 .light-green    
-    background-color: $light-green ;
+    background-color: $light-green
 
 .lime           
-    background-color: $lime ;
+    background-color: $lime
 
 .yellow         
-    background-color: $yellow ;
+    background-color: $yellow
 
 .amber          
-    background-color: $amber ;
+    background-color: $amber
 
 .orange         
-    background-color: $orange ;
+    background-color: $orange
 
 .deep-orange    
-    background-color: $deep-orange ;
+    background-color: $deep-orange
