--- a/src/scss/editPicPage.sass
+++ b/src/scss/editPicPage.sass
@@ -136,7 +136,8 @@
             grid-template-columns: 1fr 1fr
 
             .resizeOpt
-                height: 100%
+                min-height: 100%
+                max-height: 100%
                 display: flex
                 flex-direction: row
                 justify-content: center
@@ -152,7 +153,8 @@
                     margin: 0
 
             .resizeLiveView
-                height: 100%
+                min-height: 100%
+                max-height: 100%
                 display: flex
                 flex-direction: row
                 justify-content: center
