--- a/src/scss/mediaqueries.scss
+++ b/src/scss/mediaqueries.scss
@@ -9,3 +9,11 @@
         }
     }
   }
+
+@media screen and (max-width: 800px) and (min-width: 500px) {
+    .container{
+        .toolPicker{
+            min-height: 100%;
+        }
+    }
+}
