--- a/src/scss/editPicPage.sass
+++ b/src/scss/editPicPage.sass
@@ -161,6 +161,8 @@
                 .button
                     z-index: 0
                     border-radius: 10px
+                    width: 80%
+                    padding: 0
                     background-color: $teal
                     filter: brightness(120%)
 
