--- a/src/scss/editPicPage.sass
+++ b/src/scss/editPicPage.sass
@@ -162,6 +162,7 @@
                     z-index: 0
                     border-radius: 10px
                     width: 80%
+                    height: auto
                     padding: 0
                     background-color: $teal
                     filter: brightness(120%)
